# agentic-chat

./: .gitignore  README.md  pyproject.toml
agent_chat/: __init__.py  actions.py  app.py  commands.py  console.py  llm.py  models.py  protocols.py  transport.py
clients/simple/: README.md  package-lock.json  package.json
clients/simple/src/: decode.ts
clients/typescript/: tsconfig.json
clients/typescript/src/: client.ts  frames.ts  index.ts
examples/: hello_world.py
examples/react-hello/: README.md  e2e-smoke.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/react-hello/src/: App.tsx  useChat.ts
examples/react-journal/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/react-journal/src/: App.tsx
tests/: test_isolation.py
