[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-chat"
version = "0.1.0"
description = "Domain-agnostic, drop-in streaming chat backend (Action protocol + FastAPI transport)"
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "fastapi>=0.115",
]

[project.optional-dependencies]
# LLM providers are lazy-imported; install what your host needs.
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=1.4.0"]
ollama = ["langchain-ollama>=1.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["agent_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
